# cs2-forecast

./: .gitignore  README.md  README_BACKTESTING.md  pyproject.toml
seeds/: tournaments.txt
src/cs2forecast/: cli.py  config.py
src/cs2forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cs2forecast/backtesting/: blended_series_backtest.py  elo_backtest.py  enhanced_backtest.py  enhanced_map_backtest.py  metrics.py  ml_backtest.py  series_backtest.py
src/cs2forecast/features/: elo.py  h2h.py  map_recent_form.py  ml_dataset.py  recent_form.py
src/cs2forecast/ingestion/: liquipedia_client.py  scrape.py  seeds.py
src/cs2forecast/parsing/: match_parser.py  models.py  normalization.py  parse_raw_pages.py  template_inspector.py
src/cs2forecast/prediction/: predictor.py
src/cs2forecast/storage/: db.py  repositories.py  schema.sql
tests/: test_metrics.py  test_ml_backtest.py  test_ml_dataset.py  test_normalization.py  test_predictor.py  test_series_probability.py
